--- a/src/app/pages/account-details/account-details.component.html
+++ b/src/app/pages/account-details/account-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="row gx-5">
         <div class="col-4">
             <app-account-sidebar></app-account-sidebar>
         </div>
