--- a/src/app/pages/account-details/account-sidebar/account-sidebar.component.css
+++ b/src/app/pages/account-details/account-sidebar/account-sidebar.component.css
@@ -1,5 +1,5 @@
 .container-fluid{
-    max-width: 350px;
+    width: 300px;
     margin:0;
     padding:0;
     height:100vh;
@@ -18,9 +18,6 @@ li:hover{
 }
 
 
-li a:hover{
-    color: #007bff
-}
 
 li:hover svg {
     fill: #007bff;
@@ -30,7 +27,10 @@ li:hover svg {
 
 
 .active {
-    background-color: rgba(0, 123, 255, 0.2);
+    border-radius: 8px;
     border-left: 4px solid #007bff;
     padding-left: 8px;
+    transform: scale(1.1);
+    background-color: rgba(0, 123, 255, 0.1);
+
 }
