--- a/src/app/pages/account-details/personal-info/personal-info.component.html
+++ b/src/app/pages/account-details/personal-info/personal-info.component.html
@@ -4,27 +4,27 @@
         
 
         <div class="col-12 col-md-10 col-lg-11">
-            <form class="p-4 border rounded shadow-sm bg-light">
+            <form class="p-4">
                 <div class="row g-4">
                     <div class="col">
                         <div class="mb-3">
-                            <label for="lastName" class="form-label fw-semibold">Nom</label>
+                            <label for="lastName" class="form-label fw-bold">Nom</label>
                             <input type="text" class="form-control" id="lastName" [(ngModel)]="user.lastName" name="lastName">
                         </div>
                         <div class="mb-3">
-                            <label for="firstName" class="form-label fw-semibold">Prénom</label>
+                            <label for="firstName" class="form-label fw-bold">Prénom</label>
                             <input type="text" class="form-control" id="firstName" [(ngModel)]="user.firstName" name="firstName">
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label fw-semibold">Email</label>
+                            <label for="email" class="form-label fw-bold">Email</label>
                             <input type="text" class="form-control" id="email" [(ngModel)]="user.email" name="email">
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label fw-semibold">Mot de passe</label>
+                            <label for="password" class="form-label fw-bold">Mot de passe</label>
                             <input type="password" class="form-control" id="password" [(ngModel)]="user.password" name="password">
                         </div>
                         <div class="mb-3">
-                            <label for="phone" class="form-label fw-semibold">Téléphone</label>
+                            <label for="phone" class="form-label fw-bold">Téléphone</label>
                             <input type="text" class="form-control" id="phone" [(ngModel)]="user.phone" name="phone">
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                     
                     <div class="col-12 col-md-6">
                         <div *ngFor="let detail of addressDetail" class="mb-3">
-                            <label for="{{detail.label}}" class="form-label fw-semibold">{{detail.label}}</label>
+                            <label for="{{detail.label}}" class="form-label fw-bold">{{detail.label}}</label>
                             <input type="text" class="form-control" id="address" [(ngModel)]="detail.value" name="{{detail.label}}">
                         </div>
                     </div>
